added dag nodes and messages
adding dag

dag now verifies received messages

cleanup

cleanup

cleanup

added dag logging

added build script

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "projects/libertynet/plugins/*",
     "projects/libertynet/examples/*",
     "projects/libertynet/core/new-p2p/*",
-    "projects/libertynet/core/new-rpc/*"
+    "projects/libertynet/core/new-rpc/*",
+    "projects/libertynet/core/new-dag/*"
   ]
 }
