added rest of p2p and tests
fixing tests for jenkins

fixed test

setup ci

p2p compiling

compiling dag

converted over rpc package

all tests running

added new-libertynet test

got new libertynet working with external code

add removing lib directories on build

fix builds

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "projects/libertynet/examples/*",
     "projects/libertynet/core/new-p2p/*",
     "projects/libertynet/core/new-rpc/*",
-    "projects/libertynet/core/new-dag/*"
+    "projects/libertynet/core/new-dag/*",
+    "ci",
+    "projects/sandbox/temp"
   ]
 }
