--- a/projects/libertynet/core/new-p2p/package.json
+++ b/projects/libertynet/core/new-p2p/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
-  "exports": "./index.js",
+  "main": "./lib/index.js",
+  "exports": {
+    ".": "./lib/index.js",
+    "./p2plogger": "./lib/p2pLogger.js"
+  },
   "dependencies": {
     "@chainsafe/libp2p-noise": "^8.0.1",
     "@libp2p/bootstrap": "^2.0.0",
@@ -28,7 +32,8 @@
     "typescript": "^4.8.2"
   },
   "scripts": {
-    "test": "mocha -r ts-node/esm src/**/*.spec.ts"
+    "build": "rm -rf ./lib & tsc",
+    "test": "mocha --require=ts-node/register   --loader=ts-node/esm    --experimental-specifier-resolution=node src/**/*.spec.ts"
   },
   "engines": {
     "node": ">=14.16"
