--- a/projects/libertynet/core/new-rpc/package.json
+++ b/projects/libertynet/core/new-rpc/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "type": "module",
   "license": "MIT",
+  "exports": {
+    ".": "./lib/index.js"
+  },
   "dependencies": {
     "@scottburch/rxjs-msg-bus": "*",
     "@types/chai": "^4.3.3",
@@ -20,6 +23,9 @@
   },
   "engines": {
     "node": ">=14.16"
+  },
+  "scripts": {
+    "test": "mocha --require ts-node/register   --loader=ts-node/esm    --experimental-specifier-resolution=node src/**/*.spec.ts",
+    "build": "rm -rf ./lib & tsc"
   }
-
 }
